# kvidxkit

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  BEST_USE_CASES.md  COOKBOOK.md  DEPLOYMENT.md  PERFORMANCE_TUNING.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md  USAGE_EXAMPLES.md
examples/: README.md
examples/message-queue/: main.c
examples/raft-log/: main.c
examples/session-store/: main.c
examples/timeseries/: main.c
src/: CMakeLists.txt  ctest.h  kvidxkit-bench.c  kvidxkit-fuzz.c  kvidxkit-test-batch.c  kvidxkit-test-comprehensive.c  kvidxkit-test-config.c  kvidxkit-test-errors.c  kvidxkit-test-export.c  kvidxkit-test-iterator.c  kvidxkit-test-lmdb.c  kvidxkit-test-primitives.c  kvidxkit-test-range.c  kvidxkit-test-rocksdb.c  kvidxkit-test-stats.c  kvidxkit-test-tabledesc.c  kvidxkit-test.c  kvidxkit.c  kvidxkit.h  kvidxkitAdapterLmdb.c  kvidxkitAdapterLmdb.h  kvidxkitAdapterRocksdb.c  kvidxkitAdapterRocksdb.h  kvidxkitAdapterSqlite3.c  kvidxkitAdapterSqlite3.h  kvidxkitAdapterSqlite3Helper.c  kvidxkitAdapterSqlite3Helper.h  kvidxkitConfig.h  kvidxkitErrors.c  kvidxkitErrors.h  kvidxkitExport.h  kvidxkitIterator.c  kvidxkitIterator.h  kvidxkitRegistry.c  kvidxkitRegistry.h  kvidxkitSchema.c  kvidxkitSchema.h  kvidxkitTableDesc.c  kvidxkitTableDesc.h  kvidxkit_internal.h  (+1 more)
